<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registration">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#3F51B5"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:theme="@style/Toolbar_back_button_style"
        app:title="Covid-19 Vaccine Booking"
        app:titleMargin="2dp"
        app:titleTextColor="#FFFFFF" />

    <TextView
        android:id="@+id/txt_tittle_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="93dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="128dp"
        android:layout_weight="1"
        android:gravity="center|start"
        android:text="@string/tittle_book"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.371"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_register" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:padding="18dp">

            <TextView
                android:id="@+id/label_register_personalInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/personal_info"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TIL_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="20dp"
                android:hint="Name"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TIL_phone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:hint="Phone Number"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:counterMaxLength="15">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TIL_ICNumber"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:hint="NRIC"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:counterMaxLength="12">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_ic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="text"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/text_vaccine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/text_vaccine"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />
            <RadioGroup
                android:id="@+id/radiogroup_vaccine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radiobutton_pfizer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="radiobuttoncheck"
                    android:text="@string/pfizer"
                    android:textSize="14sp" />

                <RadioButton
                    android:id="@+id/radiobutton_sinovac"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="radiobuttoncheck"
                    android:text="@string/sinovac"
                    android:textSize="14sp" />

                <RadioButton
                    android:id="@+id/radiobutton_AZ"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="radiobuttoncheck"
                    android:text="@string/AZ"
                    android:textSize="14sp" />
            </RadioGroup>

            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="submit"
                android:backgroundTint="#3F51B5"
                android:text="@string/submit" />


        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>