<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".quiz">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_quiz"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#3F51B5"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:theme="@style/Toolbar_back_button_style"
        app:title="Quiz"
        app:titleMargin="2dp"
        app:titleTextColor="#FFFFFF" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="7dp"
                app:cardUseCompatPadding="true">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraint_card_01"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/textQ1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:inputType="textMultiLine"
                        android:paddingTop="5dp"
                        android:paddingBottom="8dp"
                        android:text="@string/q1"
                        android:textSize="15dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <RadioGroup
                        android:id="@+id/groupQ1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textQ1">

                        <RadioButton
                            android:id="@+id/buttonQ1Yes"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="checkQ1"
                            android:text="Yes" />

                        <RadioButton
                            android:id="@+id/buttonQ1No"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="checkQ1"
                            android:text="No" />
                    </RadioGroup>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="7dp"
                app:cardUseCompatPadding="true">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraint_card_02"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/textQ2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:inputType="textMultiLine"
                        android:paddingTop="5dp"
                        android:paddingBottom="8dp"
                        android:text="@string/q2"
                        android:textSize="15dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <RadioGroup
                        android:id="@+id/groupQ2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textQ2">

                        <RadioButton
                            android:id="@+id/buttonQ2Yes"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="checkQ2"
                            android:text="Yes" />

                        <RadioButton
                            android:id="@+id/buttonQ2No"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="checkQ2"
                            android:text="No" />
                    </RadioGroup>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="7dp"
                app:cardUseCompatPadding="true">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraint_card_03"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/textQ3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:inputType="textMultiLine"
                        android:paddingTop="5dp"
                        android:paddingBottom="8dp"
                        android:text="@string/q3"
                        android:textSize="15dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <RadioGroup
                        android:id="@+id/groupQ3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textQ3">

                        <RadioButton
                            android:id="@+id/buttonQ3Yes"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="checkQ3"
                            android:text="Yes" />

                        <RadioButton
                            android:id="@+id/buttonQ3No"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="checkQ3"
                            android:text="No" />
                    </RadioGroup>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="7dp"
                app:cardUseCompatPadding="true">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraint_card_04"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/textQ4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:inputType="textMultiLine"
                        android:paddingTop="5dp"
                        android:paddingBottom="8dp"
                        android:text="@string/q4"
                        android:textSize="15dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <RadioGroup
                        android:id="@+id/groupQ4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textQ4">

                        <RadioButton
                            android:id="@+id/buttonQ4Yes"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="checkQ4"
                            android:backgroundTint="#3F51B5"
                            android:text="Yes" />

                        <RadioButton
                            android:id="@+id/buttonQ4No"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="checkQ4"
                            android:text="No" />
                    </RadioGroup>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btnsubmit"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="launchRegister"
                android:padding="15dp"
                android:paddingRight="20dp"
                android:backgroundTint="#3F51B5"
                android:text="@string/submittext"
                android:textAllCaps="false"
                android:textSize="15dp" />


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>